# slop-janitor

./: .gitignore  LICENSE  README.md  codex-refactor-loop  pyproject.toml  slop-janitor
.agents/skills/execplan-improve-subagents/: SKILL.md
.agents/skills/find-best-refactor/: SKILL.md
.agents/skills/find-best-refactor/agents/: openai.yaml
.agents/skills/implement-execplan/: SKILL.md
.agents/skills/review-recent-work/: SKILL.md
.agents/skills/review-recent-work-subagents/: SKILL.md
.agents/skills/review-recent-work-subagents/agents/: openai.yaml
codex_refactor_loop/: app_server.py  cli.py  run_log.py
scripts/: sync-skills-from-home.sh
slop_janitor/: app_server.py  cli.py  models.py  turn_session.py
tests/: test_cli.py  test_turn_session.py
tests/fixtures/: fake_app_server.py
