[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-refactor-loop"
version = "0.1.0"
description = "A small CLI that runs repeatable multi-turn Codex workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

[project.scripts]
codex-refactor-loop = "codex_refactor_loop.cli:main"

[tool.setuptools.packages.find]
include = ["codex_refactor_loop*"]
