[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slop-janitor"
version = "0.1.0"
description = "A small CLI that runs repeatable multi-turn Codex workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

[project.scripts]
slop-janitor = "slop_janitor.cli:main"

[tool.setuptools.packages.find]
include = ["slop_janitor*"]
